checking bibliography, half done

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -10,7 +10,7 @@
 % \usepackage[numbers,sort]{natbib}
 \usepackage[round]{natbib} 
 \usepackage{array}
-\usepackage{hyperref}
+\usepackage{hyperref,url}
 \usepackage{float}
 \makeatletter
 
@@ -343,13 +343,13 @@ alyssa.cirtwill@gmail.com\\
 
   \subsection*{Computing the posterior distribution}
 
-      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. Network data for a similar study system may, however, not be available. In that case, one might use the first sub-network collected as ``training data" to guide future sampling. To simulate this situation, we created priors using a single sub-network from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset. To demonstrate how the use of data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller \emph{Salix}-galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. This smaller system was much more densely-connected than that described in~\citet{Kopelke2017} and provided unreasonable distributions for interaction probabilities (\emph{Appendix S4}). 
+      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. Network data for a similar study system may, however, not be available. In that case, one might use the first sub-network collected as ``training data" to guide future sampling. To simulate this situation, we created priors using a single sub-network from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset. To demonstrate how the use of data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller \emph{Salix}-galler-natural enemy system~\citep[Data available from the Dryad Digital Repository: https://doi.org/10.5061/dryad.g7805]{Barbour2016}\nocite{Barbour2016Dryad}. This smaller system was much more densely-connected than that described in~\citet{Kopelke2017} and provided unreasonable distributions for interaction probabilities (\emph{Appendix S4}). 
 
 
       To obtain the priors based on the Zillis sub-network, we estimated frequencies of \emph{Salix}-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S3} for details and code). Specifically, we obtained prior parameters of $\alpha$=8.72, $\beta$=305 for the \emph{Salix}-galler component and $\alpha$=0.700, $\beta$=8.49 for the galler-natural enemy components of the network. After calculating these prior parameters, we were then able to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
   
 
-      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution  was: $\bar\lambda$=0.028, var($\lambda$)=8.60$\times$10$^{-5}$. The prior distribution for the galler-natural enemy network was: $\bar\lambda$=0.076, var($\lambda$)=0.008. The posterior interaction probabilities obtained based on the Zillis sub-network were much lower than those obtained based on~\citet{Barbour2016}; this emphasizes the importance of using an appropriate study system when constructing a prior (\emph{Appendix S4}).
+      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution  was: $\bar\lambda$=0.028, var($\lambda$)=8.60$\times$10$^{-5}$. The prior distribution for the galler-natural enemy network was: $\bar\lambda$=0.076, var($\lambda$)=0.008. The posterior interaction probabilities obtained based on the Zillis sub-network were much lower than those obtained based on~\citet[Data available from the Dryad Digital Repository: https://doi.org/10.5061/dryad.g7805]{Barbour2016}; this emphasizes the importance of using an appropriate study system when constructing a prior (\emph{Appendix S4}).
 
 
       For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. As the most extreme case, consider a pair of species which co-occurred at all 374 sites and was never observed to interact. Using the priors described above, our distribution for the \emph{Salix}-galler network would become $\bar\lambda_{ij}$=1.27 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=1.82 $\times$ 10$^{-5}$ while our distribution for the galler-natural enemy network would become $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76. Distributions for both network components were very close to 0 with small variance about our estimate of $\lambda$; species $i$ and $j$ are extremely unlikely to interact at sites or times not included in our sample.
