--- a/manuscript/manual_abbrev.bib
+++ b/manuscript/manual_abbrev.bib
@@ -79,7 +79,7 @@ doi={10.1111/2041-210X.12103}}
 @article{Gravel2016,
 title={The meaning of functional trait composition of food webs for ecosystem functioning},
 year={2016},
-journal={Phil Trans B},
+journal={Phil Trans R Soc B},
 author={Gravel, Dominique and Albouy, Camille and Thuiller, Wilfried},
 pages={20150268},
 volume={371},
@@ -1109,7 +1109,7 @@ author = {Hadfield, J D},
 doi = {10.1002/ana.22635},
 eprint = {arXiv:1501.0228},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Hadfield - 2010 - MCMC methods for multi-response generalized linear mixed models the MCMCglmm R package.pdf:pdf},
-journal = {Journal of Statistical Software},
+journal = {J Stat Softw},
 keywords = {animal model,linear mixed model,mcmc,multivariate,pedigree,phylogeny},
 number = {2},
 pages = {1--22},
@@ -2178,7 +2178,7 @@ abstract = {Aim$\backslash$n$\backslash$nFunctional relationships between specie
 author = {Dehling, D. Matthias and T{\"{o}}pfer, Till and Schaefer, H. Martin and Jordano, Pedro and B{\"{o}}hning-Gaese, Katrin and Schleuning, Matthias},
 doi = {10.1111/geb.12193},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Dehling et al. - 2014 - Functional relationships beyond species richness patterns trait matching in plant-bird mutualisms across scales.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Andes,Elevational gradient,Fleshy-fruited plants,Fourth-corner analysis,Frugivorous birds,Functional diversity,Interaction networks,Man?? National Park,Mutualism,Seed dispersal},
 number = {10},
 pages = {1085--1093},
@@ -2245,7 +2245,7 @@ abstract = {Global climate change is known to affect the assembly of ecological 
 author = {Hua, Fangyuan and Hu, Junhua and Liu, Yang and Giam, Xingli and Lee, Tien Ming and Luo, Hao and Wu, Jia and Liang, Qiaoyi and Zhao, Jian and Long, Xiaoyan and Pang, Hong and Wang, Biao and Liang, Wei and Zhang, Zhengwang and Gao, Xuejie and Zhu, Jiang},
 doi = {10.1111/gcb.13199},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Hua et al. - 2016 - Community-wide changes in intertaxonomic temporal co-occurrence resulting from phenological shifts.pdf:pdf},
-journal = {Global Change Biology},
+journal = {Glob Change Biol},
 keywords = {China,Climate change,Community assembly,Interspecific temporal overlap,Phenological shift,Temporal occurrence window},
 number = {5},
 pages = {1746--1754},
@@ -2258,18 +2258,18 @@ abstract = {Climate change has had numerous ecological effects, including specie
 author = {Gezon, Zachariah J. and Inouye, David W. and Irwin, Rebecca E.},
 doi = {10.1111/gcb.13209},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Gezon, Inouye, Irwin - 2016 - Phenological change in a spring ephemeral Implications for pollination and plant reproduction.pdf:pdf},
-journal = {Global Change Biology},
+journal = {Glob Change Biol},
 keywords = {Claytonia lanceolata,Climate change,Phenological mismatch,Phenology,Plant reproduction,Pollen limitation,Pollination},
 number = {5},
 pages = {1779--1793},
 pmid = {26833694},
-title = {{Phenological change in a spring ephemeral: Implications for pollination and plant reproduction}},
+title = {{Phenological change in a spring ephemeral: implications for pollination and plant reproduction}},
 volume = {22},
 year = {2016}
 }
 @article{Menzel2006,
 author = {Menzel, Annette and Sparks, Tim. H. and Estrella, Nicole and Koch, Elisabeth and Aasa, Anto and Ahas, Rein and Alm-K{\"{u}}bler, Kerstin and Bissolli, Peter and Braslavsk{\'{a}}, Olga and Briede, Agrita and Chmielewski, Frank M. and Crepinsek, Zalika and Curnel, Yannick and Dahl, {\AA}slog and Defila, Claudio and Donnelly, Alison and Filella, Yolanda and Jatczak, Katarzyna and M{\aa}ge, Finn and Mestre, Antonia and Nordli, {\O}yvind and Pe{\~{n}}uelas, Josep and Pirinen, Pentti and Remi{\v{s}}ov{\'{a}}, Viera and Scheifinger, Helfried and Striz, Martin and Susnik, Andreja and van Vliet, Arnold J. H. and Wielgolaski, Frans-Emil and Zach, Susanne and Zust, Ana},
-journal = {Global Change Biology},
+journal = {Glob Change Biol},
 pages = {1969--1976},
 title = {{European phenological response to climate change matches the warming pattern}},
 volume = {12},
@@ -2452,7 +2452,7 @@ abstract = {Stream fish are expected to be significantly influenced by climate c
 author = {Buisson, La{\"{e}}titia and Thuiller, Wilfried and Lek, Sovan and Lim, Puy and Grenouillet, Ga{\"{e}}l},
 doi = {10.1111/j.1365-2486.2008.01657.x},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Buisson et al. - 2008 - Climate change hastens the turnover of stream fish assemblages.pdf:pdf},
-journal = {Global Change Biology},
+journal = {Glob Change Biol},
 keywords = {Climate change,Fish assemblages,GAM,Predictive models,Species distribution,Species turnover,Stream fish,Upstream-downstream gradient},
 number = {10},
 pages = {2232--2248},
@@ -2515,7 +2515,7 @@ abstract = {Urbanization and agricultural intensification of landscapes are impo
 author = {Leong, Misha and Ponisio, Lauren C. and Kremen, Claire and Thorp, Robbin W. and Roderick, George K.},
 doi = {10.1111/gcb.13141},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Leong et al. - 2015 - Temporal dynamics influenced by global change bee community phenology in urban, agricultural, and natural landscap.pdf:pdf},
-journal = {Global Change Biology},
+journal = {Glob Change Biol},
 keywords = {Agricultural,Bees,Ecosystem services,Land-use change,Phenology,Pollinators,Seasonality,Species distributions,Urban ecology},
 number = {3},
 pages = {1046--1053},
@@ -2594,7 +2594,7 @@ abstract = {BACKGROUND: Network analyses of plant-animal interactions hold valua
 author = {Bl{\"{u}}thgen, Nico and Menzel, Florian and Bl{\"{u}}thgen, Nils},
 doi = {10.1186/1472-6785-6-9},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Bl{\"{u}}thgen, Menzel, Bl{\"{u}}thgen - 2006 - Measuring specialization in species interaction networks.pdf:pdf},
-journal = {BMC ecology},
+journal = {BMC Ecol},
 keywords = {Adaptation, Physiological,Animals,Argentina,Bees,Bees: physiology,Computer Simulation,Ecosystem,Food Chain,Great Britain,Models, Biological,Plant Physiological Phenomena,Pollen,Population Dynamics,Species Specificity},
 number = {1},
 pages = {9},
@@ -3730,7 +3730,7 @@ abstract = {  Aim  Mutualistic network parameters, such as modularity and nested
 author = {Nogales, M. and Heleno, R. and Rumeu, B. and Gonz{\'{a}}lez-Castro, a. and Traveset, a. and Vargas, P. and Olesen, J. M.},
 doi = {10.1111/geb.12315},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Nogales et al. - 2015 - Seed-dispersal networks on the Canaries and the Gal{\'{a}}pagos archipelagos Interaction modules as biogeographical e.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Animal-plant interaction,Fleshy fruit,Food web,Frugivory,Insular network,Modularity},
 pages = {1--11},
 title = {{Seed-dispersal networks on the Canaries and the Gal{\'{a}}pagos archipelagos: Interaction modules as biogeographical entities}},
@@ -3980,7 +3980,7 @@ abstract = {BACKGROUND: Climate change is particularly pronounced in the High Ar
 author = {H{\o}ye, Toke T and Forchhammer, Mads C},
 doi = {10.1186/1472-6785-8-8},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/H{\o}ye, Forchhammer - 2008 - The influence of weather conditions on the activity of high-arctic arthropods inferred from long-term observ.pdf:pdf},
-journal = {BMC Ecology},
+journal = {BMC Ecol},
 pages = {8},
 pmid = {18454856},
 title = {{The influence of weather conditions on the activity of high-arctic arthropods inferred from long-term observations.}},
@@ -4070,7 +4070,7 @@ abstract = {Climate change is altering the phenology of species across the world
 author = {Miller-Rushing, Abraham J and H{\o}ye, Toke Thomas and Inouye, David W and Post, Eric},
 doi = {10.1098/rstb.2010.0148},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Miller-Rushing et al. - 2010 - The effects of phenological mismatches on demography.pdf:pdf},
-journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+journal = {Phil Trans R Soc B},
 keywords = {Climate Change,Ecosystem,Plant Development,Population Dynamics},
 number = {1555},
 pages = {3177--3186},
@@ -4122,7 +4122,7 @@ abstract = {Aim Our understanding of the ecology and biogeography of microbes, i
 author = {Jean, K{\'{e}}vin and Burnside, William R. and Carlson, Lynn and Smith, Katherine and Gu{\'{e}}gan, Jean Fran{\c{c}}ois},
 doi = {10.1111/geb.12393},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Jean et al. - 2016 - An equilibrium theory signature in the island biogeography of human parasites and pathogens.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Disease ecology,Human,Infectious diseases,Island biogeography,Pathogen diversity,Species-area relationship},
 number = {1},
 pages = {107--116},
@@ -4228,7 +4228,7 @@ abstract = {Recent changes in the seasonal timing (phenology) of familiar biolog
 author = {Thackeray, Stephen J. and Sparks, Timothy H. and Frederiksen, Morten and Burthe, Sarah and Bacon, Philip J. and Bell, James R. and Botham, Marc S. and Brereton, Tom M. and Bright, Paul W. and Carvalho, Laurence and Clutton-Brock, Tim and Dawson, Alistair and Edwards, Martin and Elliott, J. Malcolm and Harrington, Richard and Johns, David and Jones, Ian D. and Jones, James T. and Leech, David I. and Roy, David B. and Scott, W. Andy and Smith, Matt and Smithers, Richard J. and Winfield, Ian J. and Wanless, Sarah},
 doi = {10.1111/j.1365-2486.2010.02165.x},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Thackeray et al. - 2010 - Trophic level asynchrony in rates of phenological change for marine, freshwater and terrestrial environments.pdf:pdf},
-journal = {Global Change Biology},
+journal = {Glob Change Biol},
 keywords = {Climate,Linear mixed effects models,Meta-analysis,Phenology,Traits,Trophic mismatch},
 number = {12},
 pages = {3304--3313},
@@ -4254,7 +4254,7 @@ abstract = {Despite uncertainties in the magnitude of expected global warming ov
 author = {H{\o}ye, Toke T. and Post, Eric and Meltofte, Hans and Schmidt, Niels M. and Forchhammer, Mads C.},
 doi = {10.1016/j.cub.2007.04.047},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/H{\o}ye et al. - 2007 - Rapid advancement of spring in the High Arctic.pdf:pdf},
-journal = {Current Biology},
+journal = {Curr Biol},
 number = {12},
 pages = {449--451},
 pmid = {17580070},
@@ -4316,7 +4316,7 @@ abstract = {Uncovering the processes that shape the architecture of interaction 
 author = {Elias, Marianne and Fontaine, Colin and {Frank Van Veen}, F. J.},
 doi = {10.1016/j.cub.2013.05.066},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Elias, Fontaine, Frank Van Veen - 2013 - Evolutionary history and ecological processes shape a local multilevel antagonistic network.pdf:pdf},
-journal = {Current Biology},
+journal = {Curr Biol},
 number = {14},
 pages = {1355--1359},
 pmid = {23791729},
@@ -4357,7 +4357,7 @@ year = {2010}
 author = {Linder, H. P.},
 doi = {10.1098/rstb.2008.0075},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Linder - 2008 - Plant species radiations where, when, why.pdf:pdf},
-journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+journal = {Phil Trans R Soc B},
 keywords = {diversification,dynamic environments,environmental stability,extinction rate,speciation rate,species richness},
 number = {1506},
 pages = {3097--3105},
@@ -4424,7 +4424,7 @@ abstract = {BACKGROUND: Plant-feeding insects make up a large part of earth's to
 author = {Janz, N and Nylin, S and Wahlberg, N},
 doi = {10.1186/1471-2148-6-4},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Janz, Nylin, Wahlberg - 2006 - Diversity begets diversity host expansions and the diversification of plant-feeding insects.pdf:pdf},
-journal = {BMC Evolutionary Biology},
+journal = {BMC Evol Biol},
 keywords = {Animals,Biodiversity,Butterflies,Butterflies: classification,Butterflies: genetics,Ecosystem,Phylogeny,Plants,Species Specificity},
 number = {1},
 pages = {4},
@@ -4899,7 +4899,7 @@ year = {2010}
 abstract = {Multivariate analyses are well known and widely used to identify and understand structures of ecological communities. The ade4 package for the R statistical environment proposes a great number of multivariate methods. Its implementation follows the tradition of the French school of ”Analyse des Donn´ees” and is based on the use of the duality diagram. We present the theory of the duality diagram and discuss its implementation in ade4. Classes and main functions are presented. An example is given to illustrate the ade4 philosophy},
 author = {Dray, St{\'{e}}phane and Dufour, a. B.},
 doi = {10.1.1.177.8850},
-journal = {Journal of Statistical Software},
+journal = {J Stat Softw},
 keywords = {ade4,duality diagram,ecological data,multivariate analysis,ordination},
 number = {4},
 pages = {1 -- 20},
@@ -5678,7 +5678,7 @@ abstract = {The continental shelf of the Ross Sea is one of the Antarctic's most
 author = {Smith, Walker O and Ainley, David G and Cattaneo-Vietti, Riccardo},
 doi = {10.1098/rstb.2006.1956},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Smith, Ainley, Cattaneo-Vietti - 2006 - Trophic interactions within the Ross Sea continental shelf ecosystem.pdf:pdf},
-journal = {Philosophical transactions of the Royal Society of London. Series B, Biological sciences},
+journal = {Phil Trans R Soc Lond B},
 keywords = {benthic coupling,bio-physical coupling,ecosystem function,ecosystem structure,neritic food web,pelagic,ross sea},
 number = {December 2006},
 pages = {95--111},
@@ -8026,7 +8026,7 @@ abstract = {All ecologists are familiar with graphical portrayals of food webs s
 author = {{Frank van Veen}, F. J.},
 doi = {10.1016/j.cub.2009.01.026},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Frank van Veen - 2009 - Food webs.pdf:pdf},
-journal = {Current Biology},
+journal = {Curr Biol},
 number = {7},
 pages = {313--323},
 pmid = {19368868},
@@ -8516,7 +8516,7 @@ abstract = {Species-rich tropical communities are expected to be more specialize
 author = {Schleuning, Matthias and Fr{\"{u}}nd, Jochen and Klein, Alexandra Maria and Abrahamczyk, Stefan and Alarc{\'{o}}n, Ruben and Albrecht, Matthias and Andersson, Georg K S and Bazarian, Simone and B{\"{o}}hning-Gaese, Katrin and Bommarco, Riccardo and Dalsgaard, Bo and Dehling, D. Matthias and Gotlieb, Ariella and Hagen, Melanie and Hickler, Thomas and Holzschuh, Andrea and Kaiser-Bunbury, Christopher N. and Kreft, Holger and Morris, Rebecca J. and Sandel, Brody and Sutherland, William J. and Svenning, Jens Christian and Tscharntke, Teja and Watts, Stella and Weiner, Christiane N. and Werner, Michael and Williams, Neal M. and Winqvist, Camilla and Dormann, Carsten F. and Bl{\"{u}}thgen, Nico},
 doi = {10.1016/j.cub.2012.08.015},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Schleuning et al. - 2012 - Specialization of mutualistic interaction networks decreases toward tropical latitudes.pdf:pdf},
-journal = {Current Biology},
+journal = {Curr Biol},
 keywords = {Animals,Biodiversity,Ecosystem,Genetic Variation,Plants,Plants: genetics,Pollination,Seed Dispersal,Symbiosis,Tropical Climate},
 month = {oct},
 number = {20},
@@ -8531,7 +8531,7 @@ abstract = {Aim The network structure of food webs plays an important role in 
 author = {Baiser, Benjamin and Gotelli, Nicholas J. and Buckley, Hannah L. and Miller, Thomas E. and Ellison, Aaron M.},
 doi = {10.1111/j.1466-8238.2011.00705.x},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Baiser et al. - 2012 - Geographic variation in network structure of a nearctic aquatic food web.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Chain length,Climate,Food web,Keystone predation,Network structure,North America,Pitcher plant,Sarracenia purpurea},
 month = {may},
 number = {5},
@@ -9197,7 +9197,7 @@ address = {R package version 1.1-7},
 archivePrefix = {arXiv},
 arxivId = {http://arxiv.org/abs/1406.5823},
 author = {Bates, D and Maechler, M and Bolker, B M and Walker, S},
-booktitle = {Journal of Statistical Software},
+booktitle = {J Stat Softw},
 doi = {http://lme4.r-forge.r-project.org/},
 eprint = {/arxiv.org/abs/1406.5823},
 keywords = {GLMM,LMM,Linear mixed-models,R},
@@ -9496,7 +9496,7 @@ abstract = {ABSTRACT Aim Understanding extinction on islands is critical for bio
 author = {Hanna, Emily and Cardillo, Marcel},
 doi = {10.1111/geb.12103},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Hanna, Cardillo - 2014 - Island mammal extinctions are determined by interactive effects of life history, island biogeography and mesopr.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Apex predator,Extinction,Introduced species,Island biogeography,Islands,Mesopredator release},
 month = {sep},
 number = {4},
@@ -10978,7 +10978,7 @@ keywords = {Accumulation curves,Asymptotic richness,Biodiversity,Category-subcat
 number = {4},
 pages = {379--391},
 pmid = {223},
-title = {{Quantifying biodiversity: Procedures and pitfalls in the measurement and comparison of species richness}},
+title = {Quantifying biodiversity: Procedures and pitfalls in the measurement and comparison of species richness},
 volume = {4},
 year = {2001}
 }
@@ -11689,7 +11689,7 @@ abstract = {m{\'{e}}todo legal - integra an{\'{a}}lise de turnover (perda e ganh
 author = {Baselga, Andr{\'{e}}s},
 doi = {10.1111/j.1466-8238.2009.00490.x},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Baselga - 2010 - Partitioning the turnover and nestedness components of beta diversity.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Beta diversity,Cerambycidae,Europe,Nestedness,Similarity measures,Spatial turnover},
 month = {jan},
 number = {1},
@@ -11775,7 +11775,7 @@ abstract = {A robust food web is one in which few secondary extinctions occur af
 author = {Lafferty, Kevin D and Kuris, Armand M},
 doi = {10.1098/rstb.2008.0220},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Lafferty, Kuris - 2009 - Parasites reduce food web robustness because they are sensitive to secondary extinction as illustrated by an in.pdf:pdf},
-journal = {Philosophical transactions of the Royal Society of London. Series B, Biological sciences},
+journal = {Phil Trans R Soc Lond B},
 keywords = {connectance,ecological analogue,food web,stability,subwebs,trematode},
 month = {jun},
 number = {1524},
@@ -11981,7 +11981,7 @@ abstract = {We introduce glmulti , an R package for automated model selection an
 author = {Calcagno, Vincent and Mazancourt, Claire De},
 doi = {10.18637/jss.v034.i12},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Calcagno, Mazancourt - 2010 - glmulti An R Package for Easy Automated Model Selection with ( Generalized ) Linear Models.pdf:pdf},
-journal = {Journal of statistical software},
+journal = {J stat softw},
 keywords = {aic,bic,genetic algorithm,glm,marginality,rjava,step,variable selection},
 number = {12},
 pages = {1--29},
@@ -12836,7 +12836,7 @@ abstract = {The topology of ecological interaction webs holds important informat
 author = {Bl{\"{u}}thgen, Nico and Menzel, Florian and Hovestadt, Thomas and Fiala, Brigitte and Bl{\"{u}}thgen, Nils},
 doi = {10.1016/j.cub.2006.12.039},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Bl{\"{u}}thgen et al. - 2007 - Specialization, constraints, and conflicting interests in mutualistic networks.pdf:pdf},
-journal = {Current Biology},
+journal = {Curr Biol},
 keywords = {EVO{\_}ECOL},
 month = {feb},
 number = {4},
@@ -13174,7 +13174,7 @@ abstract = {A central and perhaps insurmountable challenge of invasion ecology i
 author = {Romanuk, Tamara N and Zhou, Yun and Brose, Ulrich and Berlow, Eric L and Williams, Richard J and Martinez, Neo D},
 doi = {10.1098/rstb.2008.0286},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Romanuk et al. - 2009 - Predicting invasion success in complex ecological networks.pdf:pdf},
-journal = {Philosophical transactions of the Royal Society of London. Series B, Biological sciences},
+journal = {Phil Trans R Soc Lond B},
 keywords = {Animals,Biodiversity,Ecosystem,Energy Metabolism,Food Chain,Models, Biological,Nonlinear Dynamics,Population Dynamics},
 month = {jun},
 number = {1524},
@@ -13670,7 +13670,7 @@ abstract = {Aim We investigated patterns of species richness and composition of 
 author = {Buckley, Hannah L. and Miller, Thomas E. and Ellison, Aaron M. and Gotelli, Nicholas J.},
 doi = {10.1111/j.1466-8238.2010.00554.x},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Buckley et al. - 2010 - Local- to continental-scale variation in the richness and composition of an aquatic food web.pdf:pdf},
-journal = {Global Ecology and Biogeography},
+journal = {Global Ecol Biogeogr},
 keywords = {Food web,Hierarchical Bayesian modelling,Latitudinal gradients,North America,Sarracenia purpurea,Species composition,Species richness},
 month = {jun},
 number = {5},
@@ -13783,7 +13783,7 @@ abstract = {Biotic recoveries following mass extinctions are characterized by a 
 author = {Sol{\'{e}}, Ricard V and Montoya, Jos{\'{e}} M and Erwin, Douglas H},
 doi = {10.1098/rstb.2001.0987},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Sol{\'{e}}, Montoya, Erwin - 2002 - Recovery after mass extinction evolutionary assembly in large-scale biosphere dynamics.pdf:pdf},
-journal = {Philosophical transactions of the Royal Society of London. Series B, Biological sciences},
+journal = {Phil Trans R Soc Lond B},
 keywords = {assembly dynamics,biodiversity recoveries,food web structure,macroevolutionary model,mass extinctions},
 month = {may},
 number = {1421},
@@ -13961,7 +13961,7 @@ abstract = {Few models concern how environmental variables such as temperature a
 author = {Petchey, Owen and Brose, Ulrich and Rall, Bj{\"{o}}rn},
 doi = {10.1098/rstb.2010.0011},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Petchey, Brose, Rall - 2010 - Predicting the effects of temperature on food web connectance.pdf:pdf},
-journal = {Philosophical transactions of the Royal Society of London. Series B, Biological sciences},
+journal = {Phil Trans R Soc Lond B},
 keywords = {activation energy,allometric diet breadth model,body size,foraging,functional response},
 month = {jul},
 number = {1549},
@@ -14483,9 +14483,9 @@ year = {1970}
 }
 @article{fitdistrplus,
 author = {Delignette-Muller, Marie Laure and Dutang, Christophe},
-journal = {Journal of Statistical Software},
+journal = {J Stat Softw},
 number = {4},
-pages = {1----34},
+pages = {1--34},
 title = {{fitdistrplus: an R package for fitting distributions}},
 volume = {64},
 year = {2015}
@@ -14497,7 +14497,7 @@ journal = {Ecology},
 keywords = {absence matrix,assembly rules,checkerboard distribution,co-occurrence,coexistence,com-,community structure,monte carlo simulation,null model,petition,presence,randomization,species combinations,test},
 number = {9},
 pages = {2606--2621},
-title = {{Null Model Analysis of Species Co-Occurrence Patterns}},
+title = {Null Model Analysis of Species Co-Occurrence Patterns},
 volume = {81},
 year = {2000}
 }
@@ -14508,7 +14508,7 @@ journal = {Ecology},
 keywords = {food webs,observation effort,quantitative food-web patterns,sampling effort,scale,scale dependence,scale invariance,trophic species},
 number = {3},
 pages = {1044--1055},
-title = {{Effects of Sampling Effort on Characterization of Food-Web Structure}},
+title = {Effects of Sampling Effort on Characterization of Food-Web Structure},
 volume = {80},
 year = {1999}
 }
@@ -14523,10 +14523,11 @@ title = {{The structure of probabilistic networks}},
 volume = {7},
 year = {2016}
 }
-@article{Barbour2016Dryad,
-author = {Barbour, MA},
+@misc{Barbour2016Dryad,
+author = {Barbour, M. A.},
 journal = {Dryad Digital Repository},
-title = {{Data from: Genetic specificity of a plant-insect food web: implications for linking genetic variation to network complexity.}},
+title = {Data from: \textit{Genetic specificity of a plant-insect food web: implications for linking genetic variation to network complexity.}{ Dryad Digital Repository}},
+howpublished = {Available at: https://doi.org/10.5061/dryad.g7805},
 year = {2016}
 }
 @article{Poisot2012,
@@ -14625,7 +14626,7 @@ author = {Barbour, Matthew A. and Fortuna, Miguel A. and Bascompte, Jordi and Ni
 journal = {P Natl Acad Sci USA},
 number = {8},
 pages = {2128--2133},
-title = {{Genetic specificity of a plant–insect food web: implications for linking genetic variation to network complexity}},
+title = {Genetic specificity of a plant-insect food web: implications for linking genetic variation to network complexity},
 url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1513633113},
 volume = {113},
 year = {2016}
