a few final bib edits

--- a/manuscript/manual_abbrev.bib
+++ b/manuscript/manual_abbrev.bib
@@ -11436,14 +11436,10 @@ volume = {83},
 year = {2002}
 }
 @article{Tylianakis2010,
-abstract = {Recent work has shown that antagonist (e.g. predator-prey food web) and mutualist (e.g. pollinator-plant) network structure can be altered by global environmental change drivers, and that these alterations may have important ecosystem-level consequences. This has prompted calls for the conservation of network structure, but precisely which attributes of webs should be conserved remains unclear. Further, the extent to which network metrics characterise the spatiotemporally-variable dynamic structure of interacting communities is unknown. Here, we summarise the attributes of web structure that are predicted to confer stability or increased function to a system, as these may be of greatest interest to conservation biologists. However, empirical evaluation of these effects is lacking in most cases, and we discuss whether stability is even desirable in all contexts. The incorporation of web attributes into conservation monitoring requires that changes in these attributes can be recorded (sampled) with relative ease. We contrast the sensitivity of metrics to sampling effort, and highlight those (such as nestedness and connectance) that could easily be incorporated into conservation monitoring. Despite our growing understanding of the characteristics of food webs that confer stability and function, numerous practical challenges need to be overcome before the goal of conserving species interaction networks can be achieved. {\textcopyright} 2009 Elsevier Ltd.},
 author = {Tylianakis, Jason M. and Lalibert{\'{e}}, Etienne and Nielsen, Anders and Bascompte, Jordi},
 doi = {10.1016/j.biocon.2009.12.004},
-file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Tylianakis et al. - 2010 - Conservation of species interaction networks.pdf:pdf},
-journal = {Biological Conservation},
+journal = {Biol Conserv},
 keywords = {Climate change,Food web,Global change,Global warming,Invasion,Land use change,Mutualism,Parasitoid,Pollination},
-month = {oct},
-number = {10},
 pages = {2270--2279},
 pmid = {19860667},
 publisher = {Elsevier Ltd},
@@ -11699,8 +11695,7 @@ volume = {19},
 year = {2010}
 }
 @article{Pires2011,
-abstract = {BACKGROUND: Simple models inspired by processes shaping consumer-resource interactions have helped to establish the primary processes underlying the organization of food webs, networks of trophic interactions among species. Because other ecological interactions such as mutualisms between plants and their pollinators and seed dispersers are inherently based in consumer-resource relationships we hypothesize that processes shaping food webs should organize mutualistic relationships as well.$\backslash$n$\backslash$nMETHODOLOGY/PRINCIPAL FINDINGS: We used a likelihood-based model selection approach to compare the performance of food web models and that of a model designed for mutualisms, in reproducing the structure of networks depicting mutualistic relationships. Our results show that these food web models are able to reproduce the structure of most of the mutualistic networks and even the simplest among the food web models, the cascade model, often reproduce overall structural properties of real mutualistic networks.$\backslash$n$\backslash$nCONCLUSIONS/SIGNIFICANCE: Based on our results we hypothesize that processes leading to feeding hierarchy, which is a characteristic shared by all food web models, might be a fundamental aspect in the assembly of mutualisms. These findings suggest that similar underlying ecological processes might be important in organizing different types of interactions.},
-author = {Pires, Mathias M. and Prado, Paulo I. and Guimar{\~{a}}es, Paulo R.},
+author = {Pires, Mathias M. and Prado, Paulo I. and Guimar{\~{a}}es Jr., Paulo R.},
 doi = {10.1371/journal.pone.0027280},
 editor = {Traveset, Anna},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Pires, Prado, Guimar{\~{a}}es - 2011 - Do food web models reproduce the structure of mutualistic networks.pdf:pdf},
@@ -13876,14 +13871,10 @@ volume = {95},
 year = {2007}
 }
 @article{Pires2011a,
-abstract = {1. Much of the current understanding of ecological systems is based on theory that does not explicitly take into account individual variation within natural populations. However, individuals may show substantial variation in resource use. This variation in turn may be translated into topological properties of networks that depict interactions among individuals and the food resources they consume (individual-resource networks). 2. Different models derived from optimal diet theory (ODT) predict highly distinct patterns of trophic interactions at the individual level that should translate into distinct network topologies. As a consequence, individual-resource networks can be useful tools in revealing the incidence of different patterns of resource use by individuals and suggesting their mechanistic basis. 3. In the present study, using data from several dietary studies, we assembled individual-resource networks of 10 vertebrate species, previously reported to show interindividual diet variation, and used a network-based approach to investigate their structure. 4. We found significant nestedness, but no modularity, in all empirical networks, indicating that (i) these populations are composed of both opportunistic and selective individuals and (ii) the diets of the latter are ordered as predictable subsets of the diets of the more opportunistic individuals. 5. Nested patterns are a common feature of species networks, and our results extend its generality to trophic interactions at the individual level. This pattern is consistent with a recently proposed ODT model, in which individuals show similar rank preferences but differ in their acceptance rate for alternative resources. Our findings therefore suggest a common mechanism underlying interindividual variation in resource use in disparate taxa.},
-author = {Pires, M. M. and Guimar{\~{a}}es, P. R. and Ara{\'{u}}jo, M. S. and Giaretta, a. a. and Costa, J. C L and dos Reis, S. F.},
+author = {Pires, M. M. and Guimar{\~{a}}es Jr., P. R. and Ara{\'{u}}jo, M. S. and Giaretta, A. A. and Costa, J. C L and dos Reis, S. F.},
 doi = {10.1111/j.1365-2656.2011.01818.x},
-file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Pires et al. - 2011 - The nested assembly of individual-resource networks.pdf:pdf},
 journal = {J Anim Ecol},
 keywords = {Complex networks,Interindividual variation,Modularity,Nestedness,Optimal diet theory},
-month = {jul},
-number = {4},
 pages = {896--903},
 pmid = {21644976},
 title = {{The nested assembly of individual-resource networks}},
@@ -14546,7 +14537,7 @@ journal = {Genome},
 keywords = {afin de d{\'{e}}terminer comment,ces r{\'{e}}seaux sont constitu{\'{e}}s,de qui mange qui,diff{\'{e}}rents niveaux de r{\'{e}}solution,dna barcodes,ecological networks,en brossant le tableau,esp{\`{e}}ces ou de populations,et,food webs,les,les r{\'{e}}seaux trophiques livrent,qui,r{\'{e}}sum{\'{e}},species delimitation,species identification,trophic links,une description des liens,unissent des groupes d},
 number = {9},
 pages = {603--628},
-title = {{The use of DNA barcodes in food web construction—terrestrial and aquatic ecologists unite!}},
+title = {{The use of DNA barcodes in food web construction--terrestrial and aquatic ecologists unite!}},
 volume = {59},
 year = {2016}
 }
